--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "codica-studio/mixpanel",
+    "name": "codicastudio/mixpanel",
     "description": "A random Codica Studio package.",
 
     "homepage": "https://github.com/codicastudio/mixpanel",
@@ -18,20 +18,19 @@
         }
     },
     "require": {
-        "illuminate/auth": "^7.0",
-        "illuminate/config": "^7.0",
-        "illuminate/console": "^7.0",
-        "illuminate/events": "^7.0",
-        "illuminate/http": "^7.0",
-        "illuminate/routing": "^7.0",
-        "illuminate/queue": "^7.0",
+        "illuminate/auth": "^8.0",
+        "illuminate/config": "^8.0",
+        "illuminate/console": "^8.0",
+        "illuminate/events": "^8.0",
+        "illuminate/http": "^8.0",
+        "illuminate/routing": "^8.0",
+        "illuminate/queue": "^8.0",
         "illuminate/support": "^8.0",
         "mixpanel/mixpanel-php": "^2.7",
         "sinergi/browser-detector": "^6.1"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.8",
-        "laravel/laravel": "^8.0",
         "laravel/browser-kit-testing": "^6.0",
         "phpmd/phpmd": "^2.7",
         "phpunit/phpunit": "^9.0",
@@ -53,6 +52,6 @@
             }
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
